# regpilot-ai-act

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  integration-ollama.yml
.playwright-mcp/: page-2026-05-21T21-44-43-564Z.yml  page-2026-05-21T21-45-06-590Z.yml
docker/: entrypoint-ingest.sh
evaluation/: loadtest_results.md  loadtest_results_stub.md  results.md  results_ollama.md  results_ollama_extra.md  results_ollama_extra2.md  results_ollama_extra3.md  results_stub.md  testset.jsonl  testset_extra.jsonl  testset_extra2.jsonl  testset_extra3.jsonl
scripts/: evaluate.py  ingest.py  loadtest.py
src/regpilot/: __init__.py  cli.py  config.py  graph.py  llm.py  loadtest.py  observability.py  schemas.py  state.py
src/regpilot/agents/: _synth_scaffold.py  intake.py  obligation_mapper.py  prohibited.py  synthesizer.py  triage.py  validator.py
src/regpilot/evaluation/: __init__.py  cli.py  metrics.py  report.py  runner.py
src/regpilot/ingestion/: annex.py  chunker.py  loader.py
src/regpilot/llm/: __init__.py  anthropic_client.py  base.py  factory.py  helpers.py  ollama.py  (+2 more)
tests/: conftest.py  test_chunker.py  test_classifier_semantic.py  test_cli_and_loadtest.py  test_evaluation_metrics.py  test_evaluation_runner_and_report.py  test_gpai.py  test_graph.py  test_llm.py  test_llm_paths.py  test_loader.py  test_observability.py  test_rag.py  test_synth_scaffold.py  test_tools.py
(+12 files in other folders)
