[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regpilot"
version = "0.1.0"
description = "Agentic RAG compliance navigator for the EU AI Act."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "György Márk Varga" }]
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "pdfplumber>=0.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "tenacity>=8.5.0",
    "streamlit>=1.36.0",
    "tabulate>=0.9.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
regpilot-ingest = "regpilot.cli:ingest"
regpilot-eval = "regpilot.cli:evaluate"
regpilot-loadtest = "regpilot.cli:loadtest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regpilot = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
